--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ a {
 }
 
 a:hover {
-  text-decoration: underline white;
+  text-decoration: underline magenta;
   text-transform: uppercase;
   text-decoration-skip-ink: auto;
 }
