--- a/style.css
+++ b/style.css
@@ -64,10 +64,10 @@ body {
 
 .obsidian-content img{
   max-width: 300px;
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: auto;
   display: block;
-  margin: 0;
+  margin: 0 auto;
   border-radius: 4px;
 }
 
